# BilbasenProject

./: all_electric_car_links.csv  pyproject.toml  scraped_car_data.csv
bilbasenproject/: Link_crawler.py  Link_scraper.py
data/data_analysis/: clean_data.csv  clean_data_ID_4.csv  engineered_data.csv  engineered_data_ID_4_pre_split.csv  predictions_categories.csv  predictions_categories_table.xlsx
data/scraped_cars/: all_data.csv
data/scraped_links/: car_links_dealer_50001_rest_km.csv  car_links_private.csv
scraped_links/: car_links_dealer_0_8000_km.csv  car_links_dealer_23001_50000_km.csv  car_links_dealer_8001_23000_km.csv  merged_car_links.csv
scripts/eda/: Model resultater.xlsx  Visualizations.pbix  data_cleaning.ipynb  data_cleaning_ID_4.ipynb  eda.ipynb  feature_engineering.ipynb  feature_engineering_ID_4.ipynb  feature_engineering_ML_model_ID_4.ipynb
scripts/scraper/: Bilbasen_scraper.py  Link_crawler.py  Link_scraper.py  csv_merger.py
