[tool.poetry]
name = "bilbasenproject"
version = "0.1.0"
description = ""
authors = ["[Simon <[simon.aarup@gmail.com]>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
selenium = "^4.20.0"
bs4 = "^0.0.2"
requests = "^2.31.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
